--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
 <script src="jquery-3.4.1.min.js"></script>
 
 <script src="markgen.js"></script>
+<script src="netcode.js"></script>
 <script src="game.js"></script>
 </html>
