--- a/index.html
+++ b/index.html
@@ -50,5 +50,5 @@
 
 <script src="markgen.js"></script>
 <script src="netcode.js"></script>
-<script src="game.js"></script>
+<script src="game.js?v=1"></script>
 </html>
