--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <div id="main">
         <h1>Make New Game</h1>
         Name: <input id="newName" />
-        <button class="btn btn-primary" onclick="addName()">Add</button>
+        <button class="btn btn-primary" onclick="addName()" id="addButton">Add</button>
         <button class="btn btn-primary" onclick="makeGameState()">Start Game</button>
         <br>
         <h1>Join Existing Game</h1>
         Name: <input id="myName" />
-        <button class="btn btn-primary" onclick="joinGame()">Join Game</button>
+        <button class="btn btn-primary" onclick="joinGame()" id="joinButton">Join Game</button>
     </div>
     <div id="playerButtons">
         <button class="btn btn-primary" onclick="playCard(this)">Play</button>
@@ -50,5 +50,5 @@
 
 <script src="markgen.js"></script>
 <script src="netcode.js"></script>
-<script src="game.js?v=1"></script>
+<script src="game.js?v=2"></script>
 </html>
