--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             <button class="btn btn-success" onclick="clueColor('green')">Green</button>
             <button class="btn btn-primary" onclick="clueColor('blue')">Blue</button>
             <button class="btn btn-purple" onclick="clueColor('purple')">Purple</button>
+            &nbsp;&nbsp;&nbsp;&nbsp;
+            <button class="btn btn-secondary" onclick="resetClueData();drawClueCards();">Clear Preview</button>
 
             <button class="btn btn-primary floatRight" onclick="sendClue()">Send Clue</button>
 
@@ -50,6 +52,17 @@
             <button class="btn btn-secondary" onclick="clueNumber(3)">3</button>
             <button class="btn btn-secondary" onclick="clueNumber(4)">4</button>
             <button class="btn btn-secondary" onclick="clueNumber(5)">5</button>
+        </div>
+
+    </div>
+    <div id="endModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modalContent">
+            <div id="endmodaltext">
+                <h1>End Game</h1>
+                Final Score: 
+            </div>
         </div>
 
     </div>
